@@ -1,3 +1,8 @@
+2007-10-21  Donal K. Fellows  <donal.k.fellows@manchester.ac.uk>
+
+	* generic/various: Start to return more useful Error codes, currently
+	mainly on assorted lookup failures.
+
 2007-11-20  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclDictObj.c: Changed the underlying implementation of the
